--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
       "url": "https://github.com/sirlantis/assemble-liquid/blob/master/LICENSE-MIT"
     }
   ],
-  "main": "./src/assemble-liquid",
+  "main": "./lib/assemble-liquid.js",
   "engines": {
     "node": ">= 0.8.0"
   },
@@ -28,6 +28,9 @@
     "test": "grunt test"
   },
   "devDependencies": {
+    "gulp-coffee": "~1.2.5",
+    "gulp": "~3.3.1",
+    "coffee-script": "~1.6.3"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
