Add prepublish script to package.json

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "prepublish": "./node_modules/gulp/bin/gulp.js --require coffee-script build"
   },
   "devDependencies": {
     "gulp-coffee": "~1.2.5",
